rhossm-grpc-example/ossm/istio-system/gw-greeter-server.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: greeter-default-egress
  namespace: istio-system
spec:
  selector:
    istio: default-egress
  servers:
  - hosts:
    - greeter-server.grpc-example.svc.cluster.local
    - greeter-server.external
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: ISTIO_MUTUAL
