rhossm-grpc-example/ossm/istio-system/se-greeter-server-mesh2.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: greeter-server-mesh2
  namespace: istio-system
spec:
  exportTo:
  - '.'
  endpoints:
  - address: greeter-server.${EXTERNAL_DOMAIN}
    ports:
      grpc-443: 443
    weight: 100
  hosts:
  - greeter-server.external
  location: MESH_EXTERNAL
  ports:
  - name: grpc-443
    number: 443
    protocol: GRPC
  resolution: DNS
