rhossm-grpc-example/ossm/istio-system/vs-greeter-server-mesh2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greeter-server-mesh2
  namespace: istio-system
spec:
  exportTo:
  - .
  gateways:
  - greeter-default-egress
  hosts:
  - greeter-server.external
  http:
  - match:
    - gateways:
      - greeter-default-egress
      port: 443
      authority:
        exact: 'greeter-server.external:80'
    rewrite:
      authority: 'greeter-server.${EXTERNAL_DOMAIN}:443'
    route:
    - destination:
        host: greeter-server.external
        port:
          number: 443
        subset: egress-greeter-server-mesh2
      weight: 100
    timeout: 4s
